# virdis_axum_ex

./: .gitignore  Cargo.toml  README.md
src/: main.rs  settings.rs
src/config/: default.toml
src/dynamic_pages/: articles.rs  mod.rs
src/kv/: mod.rs  sled_session_store.rs
src/login/: auth_user.rs  login_handler.rs  mod.rs  sled_user_store.rs  user_store.rs
src/static_pages/: index.rs  mod.rs
src/utils/: common.rs
templates/: _base.html  error.html  login.html  post.html
