[package]
name = "virdis_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# templating 
askama = "0.11.1"

# web framework
axum = { version = "0.6.7", features = ["http2"] }

# cookie based session
axum-sessions = "0.4.1"

# async session middleware
async-session = "3.0.0"

# config for various environments
config = "0.13.3"

# password hashing
rust-argon2 = "1.0.0"

# serialization / deserialization 
serde = { version = "1.0.152", features = ["derive"] }

# key/value store
sled = "0.34.7"

# error types
thiserror = "1.0.38"

# async runtime
tokio = { version = "1.25.0", features = ["full"] }

# session based authentication
axum-login = { version = "0.4.1", features = ["sqlx"] }

# hashing 
twox-hash = "1.6.3"

# async trait capabilities
async-trait = "0.1.64"
eyre = "0.6.8"




